src/components/Collapse/collapse.css
.collapse_item {
    margin: 20px 0;
}

.collapse_item:last-child {
    margin-bottom: 0;
}

.collapse_head {
    background-color: var(--theme-color);
    color: var(--text-color);
    cursor: pointer;
    user-select: none;

    display: flex;
    justify-content: space-between;

    padding: 5px 10px;
    border-radius: 5px;
    position: relative;
}

.collapse_head h3 {
    font-size: 13px;
    line-height: 1.4em;
}

.collapse_head img {
    width: 15px;
}

.collapse_content {
    background: #F7F7F7;
    color: var(--theme-color);
    font-size: 12px;
    
    padding: 20px 10px 5px 10px;
    border-radius: 5px;
    margin-top: -5px;

    /* transition à l'ouverture */
    transition: 0.4s ease-out;
}

/* transition flèche */
.collapse_head-opened,
.collapse_head-closed {
    transition: .4s ease;
}

.collapse_head-opened {
    transform: rotate(-180deg);
    max-height: auto;
}

.collapse_content-closed {
    color: var(--theme-color);
    font-size: 12px;
    max-height: 0;
    padding: 0 10px;

    /* transition à la fermeture */
    transition: 0.4s ease-out;
}

